@@ -8,6 +8,7 @@ Version 2.4.0.0
 - Added default binding for IResolutionRoot that returns the kernel.
 - Bugfix, Breaking change: Get all will now return all bindings and not skip unconditional ones anymore in case there is a conditional one. This is the same behavior as the version 2.0.1 and bevore had. 
 - Bugfix: Fixed that the CF and SL version of the activation cache did not properly remove the weak references
+- Bugfix (for CF): The CF version threw an exception when a class had a generic method on a base class. This bugfix has the side effect that the Inject attribute cannot be defined on base methods anymore. It has to be defined on the overriden method! 
 
 Version 2.2.1.0
 ---------------
